# gem-mpv

./: .gitlab-ci.yml  CMakeLists.txt  License.txt  README.md  build_macos.sh  gem_mpv.cpp  gem_mpv.hpp  gemframebuffer.h  mpv-help.pd  push_deken.sh
CMake-modules/: FindGem.cmake
docker/: Dockerfile  build_in_docker.sh
